trunk/Archive2/76/9299540d74caca/output
main.cpp: In function 'void f(const int&)':
main.cpp:8:3: error: invalid conversion from 'const int*' to 'int*' [-fpermissive]
 i = &x;
   ^
